# distributed-trees

./: .env  .gitattributes  .gitignore  README.md
parallel_tests/: Cargo.toml
parallel_tests/src/: main.rs  sorting.rs
scaling_tests/: Cargo.toml
scripts/: .bench.sh.swp  README.md  bench.sh  run.sh
scripts/archer2/: Scaling.ipynb  strong.slurm  weak.slurm
scripts/archer2/.ipynb_checkpoints/: Scaling-checkpoint.ipynb
scripts/archer2/data/: strong_memory.csv  strong_scaling_645327.csv  weak_memory.csv  weak_scaling_645325.csv
scripts/kathleen/: bench.sh  run.sh
tree/: Cargo.toml
tree/src/: .main.rs.swp  data.rs  docs-header.html  lib.rs  main.rs  morton.rs  sort.rs  time.rs  tree.rs
