[package]
name = "scaling_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree = { path = "../tree" }
mpi = { git = "https://github.com/skailasa/rsmpi" }

[[bin]]
name = "weak"
path = "src/weak/bin/main.rs"

[[bin]]
name = "strong"
path = "src/strong/bin/main.rs"