[package]
name = "tree"
version = "0.1.0"
authors = ["Srinath Kailasa <srinathkailasa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hdf5 = "0.7.1"
itertools = "0.10.0"
rand = "0.8.4"
rayon = "1.5.1"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./src/docs-header.html" ]