[package]
name = "tree"
version = "0.1.0"
authors = ["Srinath Kailasa <srinathkailasa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"
rand = "0.8.4"
rayon = "1.5.1"
mpi = { git = "https://github.com/bsteinb/rsmpi", rev = "f9aec8b8d82" }
memoffset = "0.6"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./src/docs-header.html" ]