[package]
name = "tree"
version = "0.1.0"
authors = ["Srinath Kailasa <srinathkailasa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"
rand = "0.8.4"
rayon = "1.5.1"
mpi = { git = "https://github.com/skailasa/rsmpi"}
memoffset = "0.6"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./src/docs-header.html" ]

[[bin]]
name = "foo"
path = "src/foo/bin/main.rs"